--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -1,10 +1,11 @@
 @import '@fontsource/apfel-grotezk';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 :root {
     /* colors */
     --color-dark: #1a1a1a;
-    --color-pink: #f4b9d6;
-    --color-pink-bright: #ff00ff;
+    --color-pink: #f1faee; 
+    --color-pink-bright: #a8dadc;
 
     /* breakpoints */
     --screen-wide: 800px;
@@ -22,7 +23,7 @@
 
 body {
     margin: 0;
-    font-family: 'Apfel Grotezk', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 div.maplibregl-popup-content,
@@ -32,5 +33,5 @@ div.mapboxgl-popup-content {
 	max-width: min(70ch, 75vw);
 	width: max-content;
 	box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.3);
-	font-family: 'Apfel Grotezk', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
